data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1742.wast
;; 3. **Test Description: Loop with Incorrect br_if Operand Stack Height**    - Use a loop construct where `br_if` is utilized to jump back with an incorrect operand stack height instructed by the loop’s context.    - **Constraint Check**: Ensure the operand stack unwinds correctly to the loop’s input type.    - **CFG Relevance**: Confirms loop back-branching correctly maintains stack integrity.

(assert_invalid
  (module
    (func $incorrect-loop-br_if-stack-height
      (loop (br_if 0 (i32.const 1) (i64.const 42)))
    )
  )
  "type mismatch"
)